Refator the host related config
1. Refactor host config
2. Refactor certiface config
3. Add port config
4. Add log info config

Signed-off-by: Qian Deng <dengq@vmware.com>

--- a/make/photon/prepare/templates/core/config_env.jinja
+++ b/make/photon/prepare/templates/core/config_env.jinja
@@ -1,5 +1,5 @@
 PORT=8080
-LOG_LEVEL=info
+LOG_LEVEL={{log_level}}
 EXT_ENDPOINT={{public_url}}
 DATABASE_TYPE=postgresql
 POSTGRESQL_HOST={{db_host}}
