--- a/src/portal/lib/src/create-edit-rule/create-edit-rule.component.scss
+++ b/src/portal/lib/src/create-edit-rule/create-edit-rule.component.scss
@@ -68,9 +68,15 @@ h4 {
     padding-left: 0;
 }
 
-.floatSetPar {
+.width-70 {
     display: inline-block;
     width: 70px;
+    margin-right: 10px;
+}
+
+.width-115 {
+    display: inline-block;
+    width: 115px;
     margin-right: 10px;
 }
 
