--- a/src/portal/lib/src/replication/replication-tasks/replication-tasks.component.html
+++ b/src/portal/lib/src/replication/replication-tasks/replication-tasks.component.html
@@ -69,22 +69,21 @@
     <h3 class="modal-title">Tasks</h3>
     <div class="row flex-items-xs-between flex-items-xs-bottom">
       <div class="action-select">
-        <div class="select filterTag" [hidden]="!isOpenFilterTag">
+        <div class="select filter-tag" [hidden]="!isOpenFilterTag">
           <select (change)="selectFilter($event)">
-            <option value="resourceType">{{'REPLICATION.RESOURCE_TYPE' |translate}}</option>
-            <option value="resource">{{'REPLICATION.RESOURCE' | translate}}</option>
-            <option value="destination">{{'REPLICATION.DESTINATION' | translate}}</option>
+            <option value="resource_type">{{'REPLICATION.RESOURCE_TYPE' |translate}}</option>
             <option value="status">{{'REPLICATION.STATUS' | translate}}</option>
           </select>
         </div>
         <hbr-filter [withDivider]="true" (openFlag)="openFilter($event)"
-          filterPlaceholder='{{"REPLICATION.FILTER_PLACEHOLDER" | translate}}' (filterEvt)="doSearch($event)"></hbr-filter>
+          filterPlaceholder='{{"REPLICATION.FILTER_PLACEHOLDER" | translate}}'
+          (filterEvt)="doSearch($event)" [currentValue]="searchTask"></hbr-filter>
         <span class="refresh-btn">
           <clr-icon shape="refresh" (click)="refreshTasks()"></clr-icon>
         </span>
       </div>
     </div>
-    <clr-datagrid [(clrDgSelected)]="selectedRow" [clrDgLoading]="loading">
+    <clr-datagrid (clrDgRefresh)="clrLoadTasks($event)" [(clrDgSelected)]="selectedRow" [clrDgLoading]="loading">
       <clr-dg-column>{{'REPLICATION.TASK_ID'| translate}}</clr-dg-column>
       <clr-dg-column [clrDgField]="'resource_type'">{{'REPLICATION.RESOURCE_TYPE'
         | translate}}</clr-dg-column>
@@ -92,6 +91,8 @@
         translate}}</clr-dg-column>
       <clr-dg-column [clrDgField]="'dst_resource'">{{'REPLICATION.DESTINATION' |
         translate}}</clr-dg-column>
+      <clr-dg-column [clrDgField]="'operation'">{{'REPLICATION.OPERATION' |
+          translate}}</clr-dg-column>
       <clr-dg-column [clrDgField]="'status'">{{'REPLICATION.STATUS' |
         translate}}</clr-dg-column>
       <clr-dg-column [clrDgSortBy]="startTimeComparator">{{'REPLICATION.CREATION_TIME'
@@ -104,6 +105,7 @@
         <clr-dg-cell>{{t.resource_type}}</clr-dg-cell>
         <clr-dg-cell>{{t.src_resource}}</clr-dg-cell>
         <clr-dg-cell>{{t.dst_resource}}</clr-dg-cell>
+        <clr-dg-cell>{{t.operation}}</clr-dg-cell>
         <clr-dg-cell>{{t.status}}</clr-dg-cell>
         <clr-dg-cell>{{t.start_time | date: 'short'}}</clr-dg-cell>
         <clr-dg-cell>{{t.end_time | date: 'short'}}</clr-dg-cell>
@@ -123,7 +125,7 @@
           {{pagination.lastItem +1 }} {{'ROBOT_ACCOUNT.OF' |
           translate}} </span>
         {{pagination.totalItems }} {{'ROBOT_ACCOUNT.ITEMS' | translate}}
-        <clr-dg-pagination #pagination [clrDgPageSize]="15"></clr-dg-pagination>
+        <clr-dg-pagination #pagination [clrDgPageSize]="pageSize" [(clrDgPage)]="currentPage" [clrDgTotalItems]="totalCount"></clr-dg-pagination>
       </clr-dg-footer>
     </clr-datagrid>
   </div>
