--- a/src/portal/lib/src/replication/replication.component.html
+++ b/src/portal/lib/src/replication/replication.component.html
@@ -24,19 +24,21 @@
     <div *ngIf="withReplicationJob" class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
       <div class="row flex-items-xs-between jobsRow">
         <h5 class="flex-items-xs-bottom option-left-down">{{'REPLICATION.REPLICATION_EXECUTIONS' | translate}}</h5>
-        <div class="flex-items-xs-bottom option-right-down">
-          <button class="btn btn-link" (click)="toggleSearchJobOptionalName(currentJobSearchOption)">{{"REPLICATION.ADVANCED" | translate}}</button>
-        </div>
-      </div>
-      <div class="row flex-items-xs-right row-right" [hidden]="currentJobSearchOption === 0">
-        <div class="select select-status">
-          <select (change)="doFilterJobStatus($event)">
-            <option *ngFor="let j of jobStatus" value="{{j.key}}" [selected]="currentJobStatus.key === j.key">{{j.description | translate}}</option>
-          </select>
-        </div>
-        <div class="flex-items-xs-middle">
-          <hbr-datetime [dateInput]="search.startTime" (search)="doJobSearchByStartTime($event)"></hbr-datetime>
-          <hbr-datetime [dateInput]="search.endTime" [oneDayOffset]="true" (search)="doJobSearchByEndTime($event)"></hbr-datetime>
+        <div class="row flex-items-xs-between flex-items-xs-bottom">
+          <div class="execution-select">
+            <div class="select filter-tag" [hidden]="!isOpenFilterTag">
+              <select (change)="doFilterJob($event)">
+                <option value="trigger">{{'REPLICATION.REPLICATION_TRIGGER' |translate}}</option>
+                <option value="status">{{'REPLICATION.STATUS' | translate}}</option>
+              </select>
+            </div>
+            <hbr-filter [withDivider]="true" (openFlag)="openFilter($event)"
+              filterPlaceholder='{{"REPLICATION.FILTER_EXECUTIONS_PLACEHOLDER" | translate}}'
+              (filterEvt)="doSearchExecutions($event)" [currentValue]="currentTerm"></hbr-filter>
+            <span class="refresh-btn">
+              <clr-icon shape="refresh"  (click)="refreshJobs()"></clr-icon>
+            </span>
+          </div>
         </div>
       </div>
     </div>
@@ -61,11 +63,19 @@
           </clr-dg-cell>
           <clr-dg-cell>{{j.trigger}}</clr-dg-cell>
           <clr-dg-cell>{{j.start_time | date: 'short'}}</clr-dg-cell>
-          <clr-dg-cell>{{'3mins'}}</clr-dg-cell>
+          <clr-dg-cell>{{getDuration(j)}}</clr-dg-cell>
           <clr-dg-cell>
-            {{'90%'}}
+            {{(j.succeed > 0 ? j.succeed / j.total : 0) | percent }}
           </clr-dg-cell>
-          <clr-dg-cell>{{j.status}}</clr-dg-cell>
+          <clr-dg-cell>
+            {{j.status}}
+            <clr-tooltip>
+                <clr-icon *ngIf="j.status_text" clrTooltipTrigger shape="info-circle" size="20"></clr-icon>
+                <clr-tooltip-content [clrPosition]="'left'" clrSize="md" *clrIfOpen>
+                    <span>{{j.status_text}}</span>
+                </clr-tooltip-content>
+            </clr-tooltip>
+          </clr-dg-cell>
         </clr-dg-row>
         <clr-dg-footer>
           <span *ngIf="showPaginationIndex">{{pagination.firstItem + 1}} - {{pagination.lastItem + 1}} {{'REPLICATION.OF' | translate}}</span>
