Add OIDC onboard page redirect to Harbor url when we login from OIDC and  add redirect page address when we login again after logout 1.when we are the first time we login harbor page when we login from OIDC  ,we add the url in onboard-add-username  page. 2.fix the part of issue that we cannot redirect to de origin page when we login
Signed-off-by: Yogi_Wang <yawang@vmware.com>

--- a/src/portal/src/app/account/sign-in/sign-in.component.html
+++ b/src/portal/src/app/account/sign-in/sign-in.component.html
@@ -3,7 +3,7 @@
     <form #signInForm="ngForm" class="login">
         <label class="title"> {{customAppTitle? customAppTitle:(appTitle | translate)}}
         </label>
-        <a href="/c/oidc/login" class="login-oidc">
+        <a href="/c/oidc/login" class="login-oidc"  *ngIf="isOidcLoginMode">
             <button type="button" id="log_oidc" class="btn btn-primary btn-block">
                 <span>{{'BUTTON.LOG_IN_OIDC' | translate }}</span>
             </button>
